<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_gray"
    tools:context=".Activity2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Price"
        app:layout_constraintBottom_toTopOf="@id/range_seek_bar"
        app:layout_constraintStart_toStartOf="@id/range_seek_bar"
        android:textColor="@color/white"
        android:textSize="12sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accessebility"
        app:layout_constraintBottom_toTopOf="@id/range_seek_bar2"
        app:layout_constraintStart_toStartOf="@id/range_seek_bar2"
        android:textColor="@color/white"
        android:textSize="12sp"/>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/range_seek_bar"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:values="@array/initial_slider_values"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toEndOf="@id/dropdown_menu"
        app:layout_constraintBottom_toBottomOf="@id/dropdown_menu"
        app:layout_constraintTop_toTopOf="@id/dropdown_menu"
        android:layout_marginStart="20dp" />
    <com.google.android.material.slider.RangeSlider
        android:id="@+id/range_seek_bar2"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:values="@array/initial_slider_values"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="@id/range_seek_bar"
        app:layout_constraintEnd_toEndOf="@id/range_seek_bar"
        app:layout_constraintTop_toBottomOf="@id/range_seek_bar"
        android:layout_marginTop="80dp"
        />
    <Button
        android:id="@+id/bottom_next"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_button"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="344dp"
        android:layout_height="208dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/white_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />




    <Button
        android:id="@+id/button_category"
        android:layout_width="88dp"
        android:layout_height="24dp"
        android:background="@drawable/bg_button2"
        android:text="@string/category"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        />


    <TextView
        android:id="@+id/text_ex"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@id/button_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/explore_the_nightlife_of_your_city"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


    <View
        android:id="@+id/gradient"
        android:layout_width="81dp"
        android:layout_height="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/figure"
        app:layout_constraintTop_toBottomOf="@id/text_ex"
        app:layout_constraintStart_toStartOf="@id/text_ex"
        app:layout_constraintEnd_toEndOf="@id/text_ex"
        android:layout_marginStart="220sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accessebility"
        app:layout_constraintTop_toBottomOf="@id/gradient"
        app:layout_constraintStart_toStartOf="@id/gradient"
        app:layout_constraintEnd_toEndOf="@id/gradient"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:textSize="10sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user_icon_1"
        app:layout_constraintEnd_toStartOf="@id/gradient"
        app:layout_constraintBottom_toBottomOf="@id/gradient"
        app:layout_constraintTop_toTopOf="@id/gradient"
        android:layout_marginEnd="50dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user_icon_3"
        app:layout_constraintEnd_toStartOf="@id/gradient"
        app:layout_constraintBottom_toBottomOf="@id/gradient"
        app:layout_constraintTop_toTopOf="@id/gradient"
        android:layout_marginEnd="20dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user_icon_2"
        app:layout_constraintEnd_toStartOf="@id/gradient"
        app:layout_constraintBottom_toBottomOf="@id/gradient"
        app:layout_constraintTop_toTopOf="@id/gradient"
        android:layout_marginEnd="110dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user_icon"
        app:layout_constraintEnd_toStartOf="@id/gradient"
        app:layout_constraintBottom_toBottomOf="@id/gradient"
        app:layout_constraintTop_toTopOf="@id/gradient"
        android:layout_marginEnd="80dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participants"
        app:layout_constraintBottom_toTopOf="@id/bottom_next"
        app:layout_constraintStart_toStartOf="@id/bottom_next"
        app:layout_constraintEnd_toEndOf="@id/bottom_next"
        android:layout_marginBottom="84dp"
        android:textSize="10sp"
        android:textColor="@color/black"
        tools:ignore="SmallSp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/text_ex"
        app:layout_constraintStart_toStartOf="@id/text_ex"
        app:layout_constraintEnd_toEndOf="@id/text_ex"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="230dp"
        android:textSize="16sp"
        android:id="@+id/text_free"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_free"
        app:layout_constraintStart_toStartOf="@id/text_free"
        android:text="@string/price"
        android:textSize="10sp"/>

    <Button
        android:id="@+id/heart_button"
        android:layout_width="33dp"
        android:layout_height="27dp"
        android:background="@drawable/ic_heart"
        tools:layout_editor_absoluteX="331dp"
        tools:layout_editor_absoluteY="70dp"
        tools:ignore="MissingConstraints" />
    <Spinner
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bottom_next"
        app:layout_constraintStart_toStartOf="@id/bottom_next"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_spiner"
        android:padding="10dp"
        android:id="@+id/dropdown_menu"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/dropdown_menu"
        app:layout_constraintStart_toStartOf="@id/dropdown_menu"
        android:textColor="@color/white"
        android:text="@string/category"
        android:textSize="12sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>